# drillSystem

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  license.rs  machine_code.rs  main.rs
src/components/: UpdateChecker.tsx
