[package]
name = "drilling-system"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "drilling_system_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8.5"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
uuid = { version = "1.4", features = ["v4", "serde"] }
rsa = { version = "0.9.2", features = ["sha2"] }
pkcs8 = { version = "0.10.2", features = ["pem", "encryption", "std"] }
signature = "2.1.0"
digest = "0.10.7"
sysinfo = "0.29.10"

